[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/objects/1177.png" type="Texture" id=1]
[ext_resource path="res://assets/images/objects/air.png" type="Texture" id=2]
[ext_resource path="res://src/objects/Air.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 12 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 163 )

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;


uniform float dif:hint_range(0.0, 1.0) = 0.5;

vec2 keep_aspect(vec2 a) {
	if (a.x > 1.0)
		a.x -= 1.0;
	if (a.y > 1.0)
		a.y -= 1.0;
	return a;
}


void fragment() {
	vec2 uv = keep_aspect(UV + vec2(0.0, dif));
	vec4 color = texture(TEXTURE, uv);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 6 )
shader_param/dif = 0.0

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MovingAir:material:shader_param/dif")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MovingAir:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.90735e-06, -173.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MovingAir:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.372671, 1.10921 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MovingAir:material:shader_param/dif")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Air" type="Node2D"]
script = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 1 )

[node name="Col" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1.90735e-06, 4 )
collision_layer = 0
collision_mask = 3
space_override = 1
gravity_point = true
gravity = -152.775

[node name="AirArea" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -177 )
shape = SubResource( 2 )

[node name="MovingAir" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 1.90735e-06, -173.5 )
scale = Vector2( 0.372671, 1.10921 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 7 )
anims/idle = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
